# ccver

./: .ccver  .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README-docker.md  README.md  TRACING.md  action.yml  ccver  entrypoint.sh  log.txt  rust-toolchain.toml  setup-precommit.sh  test.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/rust_depcache/: action.yaml
.github/workflows/: build.yaml  cargo-assist.yaml  cicd.yaml  docker.yml  docs.yaml  docs.yml  prebuild.yaml  release.yaml  selftag.yaml  test-action.yml  test.yaml
hooks/: update-cargo-toml-version.rs
scripts/: update-version.sh
src/: args.rs  changelog.rs  config.rs  git.rs  graph.rs  lib.rs  logs.rs  main.rs  organize-cargo-toml.code-workspace  pattern_macros.rs  reflog.pest  version.rs  version_format.rs  version_map.rs
src/args/: mod.rs
src/commands/: mod.rs
src/commands/init/: mod.rs
src/commands/install/: mod.rs
src/commands/tag/: mod.rs
src/config/: mod.rs
src/graph/: assign_edges.rs  assign_versions.rs  branch.rs  branch_heads.rs  commit.rs  commit_map.rs  dfs_postorder_history.rs  head.rs  mod.rs  node.rs  parents_and_children.rs  tag.rs  tail.rs  version.rs
src/parser/: flat_tag_map.rs  grammar.rs  interpreter.rs  lexer.rs  macros.rs  mod.rs  reduce_tagged_pairs.rs  rules.pest
src/parser/cc/: mod.rs  rules.pest
src/parser/git/: entry.txt  entry2.txt  log.txt  mod.rs  rules.pest
src/parser/tests/: integration_tests.rs  mod.rs  syntax_tests.rs  version_and_format_tests.rs
